# autoGrable

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: usage.py
src/: stage1_core.py  types.py  utils.py
src/autograble/: __init__.py  candidates.py  core.py  evaluate_graph.py  evaluate_graph_incidence.py  graph.py  preprocess.py  refine.py  selection.py  stage1.py  stage1_core.py  stage2.py  types.py  utils.py
src/autograble/models/: SAGE_Fraud.py  __init__.py  base.py  gated_gnn.py
